@@ -1,3 +1,7 @@
+= master
+
+* Allow route in named_routes plugin to be called without a block to remove existing handler (jeremyevans)
+
 = 3.50.0 (2021-11-12)
 
 * Add capture_erb plugin for capturing ERB template blocks, instead of injecting them into the template output (jeremyevans)
